# Merxio

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/v1/routers/: auth.py  catalog.py  health.py  user.py
app/cache/: __init__.py
app/core/: config.py  exceptions.py  logging.py
app/database/: session.py
app/dependencies/: auth.py  catalog.py  user.py
app/events/: __init__.py
app/models/: __init__.py  address.py  category.py  permission.py  product.py  product_image.py  refresh_token.py  role.py  role_permission.py  user.py  user_role.py
app/repositories/: address.py  category.py  product.py  user.py  users.py
app/schemas/: address.py  auth.py  category.py  health.py  product.py  user.py
app/security/: passwords.py  tokens.py
app/services/: auth.py  catalog.py  user.py
app/workers/: __main__.py
migrations/: README  env.py
migrations/versions/: 20260625_0001_create_auth_tables.py  20260625_0002_create_addresses.py  20260625_0003_create_catalog.py
tests/integration/: test_auth_api.py  test_catalog_api.py  test_health.py  test_user_api.py
tests/unit/: test_auth_dependencies.py  test_auth_service.py  test_catalog_service.py  test_config.py  test_passwords.py  test_tokens.py  test_user_service.py
