[project]
name = "merxio"
version = "0.1.0"
description = "Production-grade enterprise e-commerce backend built with FastAPI."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.0",
    "asyncpg>=0.30.0",
    "bcrypt>=4.2.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "greenlet>=3.2.0",
    "PyJWT>=2.10.0",
    "pydantic-settings>=2.9.0",
    "python-json-logger>=3.3.0",
    "sqlalchemy>=2.0.40",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["setuptools>=78.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
